# data-collector

./: .dockerignore  .env  .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  README.md  digital_ocean_spec.yaml
.grafana/: config_template.yaml
.honeycomb/: config_template.yaml  env_vars_template.sh
.sqlx/: query-00116efb1863826c38a6a9729bdd04401e0ad847a93970c082cc6d2c9d183b18.json  query-012735537fc1c1913bba7f2c39b214b87a6532a723a3ef50788bcd2f1564f8fd.json  query-01897eb6e886cd799e3d79d8810016c63608a24ff30404458a886b87d8794151.json  query-02d425a97d0c65792ea31d5b240a6196f8ac78464c6714a7adf9a0e4aafa6e6e.json  query-0308cdf58f8516a8e2f39fcdc49f1fffeec2d057288df4be4e6d803a741c3e20.json  query-04386e8e049d54b8f79315c8a6addeaac903818916d78924ec2df4784a81bed0.json  query-0558be3fcd3b4cf600574242618cfcd6b0852060fe08ebb997f5a20f96d6a76d.json  query-05a9201afc6598594003646ae74ca3a5500e850a4971b8b0b0772070a1df794e.json  query-07681ed9c95b34fc8e030f48fe57c8f38418eaf5fb5a4bd6efe27c344bc8cfa9.json  query-0868bffcc4a823fb196d17ea84f41cec3540d0d485356b2143a941adb3cb5fd2.json  query-094e2beac4c9441a87f4df4a6149346661467a42f7972024b6a1379dbb255568.json  query-0ad70abfde94f77f2209ff87820da187b7f3545669390baf66a71588e9397192.json  query-0b3043e06a43db7372a64f5baa73d6fbd1672c8c517b37b3d79c09b4af0dd5a9.json  query-0be894cf670e10b9ddfd786d478dbb5bb342d2a62d06868ebca922275e4e10f5.json  query-0fe304e05f4728bacc736be0509a408076a1e07a1e11e624e84741afe6e49bd4.json  query-10782a1c70b4206293f4c1b26d637505326b294510f54413a772bca6ec0857bb.json  query-1cb065bcc48181d89a0bda8574f4b90d89b8681e369a8e62615e47831ea2bde9.json  query-1d9fa54afeff7f9cbb80657631c1220fc4821b4ec334952097d9d8c9d7304cc9.json  query-24f21fb63e2ca15a5a7fedaddb4779d03ed52fcfb21470c1d3118a54eaf1a224.json  query-270582ca6e4b08c43ed0c66c21db2cbd944bc2b884dfdf82e157ccd0fa1585b4.json  query-27291e6d39f5d20cb6ce1efcac4387d956ecac37eb3a93b348ae457d7439dc5e.json  query-27e444b5df40d6be94cab2777ad04a205f63b6a4983ab7e951ddc8e7084a41fc.json  query-294d44f5167496eac974460b2dd806ec6aaae972b4075e1a2d85364eec32319f.json  query-2a0eb76837c3e234012c4d55e02ca8e0d2ff51461ebe7f3db435a042cff04b6f.json  query-2c88a4724986274051767b8cf44be1e0fb73170a36c167463467844cc8140ef7.json  query-2e042de1a045ee2f41e2e1687239ac7d8fcf61fdf6336c32618fe63d07d13c83.json  query-3309a641a6e9efc0c362de507662fd21b5e09619b203fd497c73539f720ad4de.json  query-346ae70baa20624090e6d63ac82db0a9354f5006d96198129c4a1eb0435a34ba.json  query-3568b7c90fd92877538c98af47aff27fa1f7e5e2432dfd0e68dec4eb75ecbd61.json  query-35a904eb0c095f88c624e7258d900deb71352b0d4e9b3857da4d5c039a6f207a.json  query-364b70d766637bf9c2a86c0dbb81b808811c89d8df6267c0ce097e90a01d842c.json  query-38c6818480d1f3252757263ad8af941524a739676951ff809c64e502996185c7.json  query-3975ad49b517ee4f8fa20e930360a28ef319a2062d6acbde536d9c917d710d0d.json  query-3dd49bb78fd9c26b7b3c776f8a0fede08c45434ced8afc4315ba96c2510f6d0e.json  query-3f5518b91de6c258319a5b0fcaa7c4434a3ff1e08d75818bab61ed3a984337e1.json  query-442da81dbb8e385cf41d9d62e64d4705ccacc9f7030d95b8b7a0f38c1ac5924b.json  query-46ea47f26e6680eed76c82daeca6eba1c5a1d3fa26bd6207610e7c1d3da2c2aa.json  query-472d30d4aee3b3762de82ec544a953590f59172dc82af1d5ba77c20c9fe409f9.json  query-483fa9109938959ae21f85098359049e651a3479fcc78e002d4e327d17225706.json  query-48e67201e50d3d2f74b6ae90efa5b3ba066e151e6d2cbba25d395d002667683f.json  (+121 more)
configs/: config.json.template  config.yaml  config.yaml.template
configuration/: base.dummy.yaml  base.yaml  base.yaml.template
documentation/: basics.md  data-providers.md  dependencies.dot  polygon.io.md
migrations/: 20230901144631_create_example_table.sql  20240108004631_NYSE_EVENTS.sql  20240108004731_NYSE_INSTRUMENTS.sql  20240108004831_SEC_COMPANIES.sql  20240108004931_MIC_CODES.sql  20240108005031_MASTER_DATA.sql  20240108005131_COUNTRIES.sql  20240111155800_MASTER_DATA.down.sql  20240111155800_MASTER_DATA.up.sql  20240111162300_MASTER_DATA.down.sql  20240111162300_MASTER_DATA.up.sql  20240210190900_MASTER_DATA.down.sql  20240210190900_MASTER_DATA.up.sql  20240210210200_INSTRUMENTS.sql  20240211124600_COUNTRIES.sql  20240211124601_MASTER_DATA_ELIGIBLE.sql  20240216204000_INSTRUMENTS.sql  20240225201200_POLYGON_OPEN_CLOSE.down.sql  20240225201200_POLYGON_OPEN_CLOSE.sql  20240303173300_POLYGON_GROUPED_DAILY.down.sql  20240303173300_POLYGON_GROUPED_DAILY.sql  20240509021200_FINANCIALMODELINGPREP_COMPANY_PROFILE.sql  20240509031900_SOURCE_SYBMOL_WARDEN.sql  20240518115000_PREPARE_FINMOD_COMPANY_STAGER.sql  20240606000900_FINANCIALMODELINGPREP_COMPANY_PROFILE.sql  20240614163600_FINANCIALMODELINGPREP_MARKET_CAPITALIZATION.sql  20240706143600_FINANCIALMODELINGPREP_COMPANY_PROFILE.sql  20240813181600_FINANCIALMODELINGPREP_COMPANY_PROFILE.sql  20240917193000_MARKET_DATA.sql  20241019182900_POLYGON_GROUPED_DAILY.sql  20241019192000_MARKET_DATA.sql  20241022155100_FINANCIALMODELINGPREP_MARKET_CAP.sql  20241027135900_FINANCIALMODELINGPREP_MARKET_CAP.sql  20250201005200_SP500_LIST_ACTION.sql  20250210201500_MASTER_DATA_ELIGIBLE.sql  20250211133000_FINANCIALMODELINGPREP_COMPANY_PROFILE.sql  20250214011000_POLYGON_OPEN_CLOSE.sql  (+7 more)
scripts/: init_db.sh  (+1 more)
(+127 files in other folders)
