[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

[[bin]]
name = "data_collector"
path = "src/main.rs"


[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
config = "0.13"
futures = "0.3.29"
httpmock = "0.6.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
serde_json = "1.0.107"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing-actix-web = "0.7" # replacement for acti-web-logger
tracing-bunyan-formatter = "0.3" # uses layer trait from tracing subscriber to build a processing pipeline for span data (see main)
tracing-log = "0.1" # redirect logs to tracing
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] } # to actually print traces
tracing = { version = "0.1", features = ["log"] } # facade to generate traces
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3.28"


[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
