[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

[[bin]]
name = "data_collector"
path = "src/main.rs"



[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
config = "0.13"
filetime = "0.2.23"
futures-util = "0.3.28"
home = "0.5.5"
reqwest = { version = "0.11.3", features = ["json", "blocking", "stream"] }
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
serde_json = "1.0.107"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing-bunyan-formatter = "0.3" # uses layer trait from tracing subscriber to build a processing pipeline for span data (see main)
string-builder = "0.2.0"
tracing-log = "0.1" # redirect logs to tracing
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] } # to actually print traces
tracing = { version = "0.1", features = ["log"] } # facade to generate traces
tracing-test = "0.2.4"
uuid = { version = "1", features = ["v4"] }
zip = "0.6.6"

[dev-dependencies]
httpmock = "0.6.8"
tempfile = "3.8.1"
rand = "0.8.5" # used to generate random election timeouts in a specific range
rusty-hook = "^0.11.2"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[package.metadata.cargo-udeps.ignore]
development = ["rusty-hook"]



