[package]
name = "data_collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
path = "src/lib.rs"

[[bin]]
name = "data_collector"
path = "src/main.rs"



[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
config = "0.14.0"
filetime = "0.2.23"
futures-util = "0.3.30"
home = "0.5.9"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json", "blocking", "stream"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "*"
serde_with = "*"
serde-aux = "4.5.0"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1", features = ["log"] } # facade to generate traces
tracing-bunyan-formatter = "0.3" # uses layer trait from tracing subscriber to build a processing pipeline for span data (see main)
tracing-log = "0.2" # redirect logs to tracing
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] } # to actually print traces
uuid = { version = "1.8", features = ["v4"] }
zip = "0.6.6"

opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
#opentelemetry-stdout = { version = "0.3", features = ["trace"] }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics", "grpc-tonic", "tls-roots"] }
tracing-opentelemetry = "0.23"

[dev-dependencies]
filetime = "0.2.23"
httpmock = "0.7.0"
tempfile = "3.10.1"
rand = "0.8.5" # used to generate random election timeouts in a specific range
rusty-hook = "^0.11.2"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "bigdecimal",
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[package.metadata.cargo-udeps.ignore]
development = ["rusty-hook"]



